--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -99,7 +99,7 @@ header { opacity: 0.98; }
 
 .title .display-4 {
   margin-top: 68px;
-  padding: 1.45rem 1rem 2rem;  
+  padding: 1.4rem 1rem 2rem;  
   background-color: #0b3259;  
   font-size: 2.5rem;  
   color: #6cc8d3; 
@@ -298,6 +298,13 @@ h3 { font-size: 1.5rem; color: rgba(0, 0, 0, 0.65); }
 
 /* Sponsor cards ========================================== */
 
+#sponsor_cards h3 { width: 100%; margin-top: 2rem; margin-bottom: 2rem; } 
+#sponsor_cards h3.american_master { margin-top: 1.25rem; }
+#sponsor_cards h3.great_performer { margin-bottom: 1rem; }
+
+#sponsor_cards p { display: block; width: 100%; margin-top: 0.5rem; } 
+#sponsor_cards span.sponsor_type { font-style: italic; } 
+
 .card-deck { flex-direction: row; margin: 0 -5px; }
 .card-deck .card { margin: 0; }
 .card-deck .col-6 { padding: 5px; }
@@ -325,7 +332,7 @@ h3 { font-size: 1.5rem; color: rgba(0, 0, 0, 0.65); }
   border-top: 1px solid #ccc;
   background-color: #0b3259;
   margin-top: 2.5rem;
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   padding-bottom: 1rem;
   color: #fff;
 }
